cicd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediq-ingress
  annotations:

    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/rewrite-target: /$2

    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - www.medimedi.kro.kr

      secretName: mediq-tls-secret
  rules:
    - host: www.medimedi.kro.kr
      http:
        paths:

          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mediq-backend-svc
                port:
                  number: 8080

          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: mediq-frontend-svc
                port:
                  number: 80
